@@ -164,9 +164,7 @@ public class PacificTest extends DelegateTest
 
     protected ITestDelegateBridge getDelegateBridge(PlayerID player)
     {
-        ITestDelegateBridge bridge1 = new TestDelegateBridge(m_data, player, (IDisplay) new DummyDisplay());
-        TestTripleADelegateBridge bridge2 = new TestTripleADelegateBridge(bridge1, m_data);
-        return bridge2;
+        return GameDataTestUtil.getDelegateBridge(player);
     }
 
     public void testNonJapanAttack()
